bugfix guess charset